@@ -7,7 +7,7 @@
  * redistribution of this file, and for a DISCLAIMER OF ALL
  * WARRANTIES.
  * 
- * RCS: @(#) $Id: ReadCmd.java,v 1.4 2000/11/19 17:15:42 krischan Exp $
+ * RCS: @(#) $Id: ReadCmd.java,v 1.5 2001/11/20 19:07:30 mdejong Exp $
  *
  */
 
@@ -57,10 +57,6 @@ class ReadCmd implements Command {
 	if (chan == null) {
 	    throw new TclException(interp, "can not find channel named \""
                     + argv[i].toString() + "\"");
-	}
-	if ((chan.getMode() & TclIO.WRONLY) != 0) {
-	    throw new TclException(interp, "channel \"" + argv[i].toString()
-	            + "\" wasn't opened for reading");
 	}
 
 	/* 
